posts link by search is working

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         </header>
          <div class="container" >
            <div id="archives">
-               browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
+              browse by <a title="The complete archive of {{ site.name }}'s Blog by category"
                             href="{{ site.url}}{{ site.baseurl }}/categoryview">category
                         </a> 
                or <a title="The complete archive of {{ site.name }}'s Blog by month"
@@ -42,6 +42,25 @@
                   </a>
            </div>
          </div>
+
+        <!-- Html Elements for Search -->
+        <div id="search-container">
+        <input type="text" id="search-input" placeholder="search...">
+        <ul id="results-container"></ul>
+        </div>
+
+        <!-- Script pointing to search-script.js -->
+        <script src="/js/search-script.js" type="text/javascript"></script>
+
+        <!-- Configuration -->
+        <script>
+        SimpleJekyllSearch({
+          searchInput: document.getElementById('search-input'),
+          resultsContainer: document.getElementById('results-container'),
+          json: '/search.json'
+        })
+        </script>
+
       </div>
     </div>
 
