--- a/style.scss
+++ b/style.scss
@@ -371,5 +371,14 @@ table, th, td {
   padding: 5px;
 }
 
+.featured-image {
+  margin-bottom: 30px;
+
+  img {
+    width: 50%;
+    max-height: 100px;
+    object-fit: cover;
+  }
+}
 @import "highlights";
 @import "svg-icons";
