--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/skills">Skills</a>
-            <a href="/portfolio">Portfolio</a>
+            <a href="/projects">Projects</a>
           </nav>
         </header>
          <div class="container" >
